fix video background on mobile, fix social links

--- a/frontend/app/splash.module.css
+++ b/frontend/app/splash.module.css
@@ -94,3 +94,10 @@
   object-fit: cover;
   transform: translate(50%, 50%);
 }
+
+@media (max-width: 768px) {
+  .mainContent{
+    margin-top: 10vh;
+  }
+}
+
